--- a/website/templates/sell.html
+++ b/website/templates/sell.html
@@ -13,15 +13,23 @@
 
   <form>
   Your Name:<br>
-  <input type="text" name="name"><br>
+  <input type="text" name="name" title="Full Name" style="color:#888;"
+    value="Enter Your Name" onfocus="inputFocus(this)" onblur="inputBlur(this)"><br><br>
   Item:<br>
-  <input type="text" name="item"><br>
+  <input type="text" name="item" title="Item" style="color:#888;"
+    value="Enter an Item Title" onfocus="inputFocus(this)" onblur="inputBlur(this)"><br><br>
   Description:<br>
-  <input type="text" name="description"><br>
+  <input type="text" name="description" title="Description" style="color:#888;"
+    value="Describe Your Item" onfocus="inputFocus(this)" onblur="inputBlur(this)"><br><br>
+  Price:<br>
+  <input type="digit" name="phone" title="Price" style="color:#888;"
+    value="Enter a Price" onfocus="inputFocus(this)" onblur="inputBlur(this)"><br><br>
   Email:<br>
-  <input type="text" name="email"><br>
+  <input type="text" name="email" title="Email" style="color:#888;"
+    value="Enter Your Email" onfocus="inputFocus(this)" onblur="inputBlur(this)"><br><br>
   Phone:<br>
-  <input type="text" name="phone"><br>
+  <input type="digit" name="phone" title="Phone" style="color:#888;"
+    value="Enter Your Phone Number" onfocus="inputFocus(this)" onblur="inputBlur(this)"><br><br>
 </form>
 
 </body>
