--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -16,7 +16,7 @@
   <h1>Bruin Exchange</h1>
 <div class = "indexItem">
   <a href="#" class="action-button shadow animate buy" >Buy</a>
-  <a href="#" class="action-button shadow animate sell">Sell</a>
+  <a href="sell/" class="action-button shadow animate sell">Sell</a>
 </div>
 <br>
 <br>
