--- a/website/templates/sell.html
+++ b/website/templates/sell.html
@@ -32,5 +32,7 @@
     value="Enter Your Phone Number" onfocus="inputFocus(this)" onblur="inputBlur(this)"><br><br>
 </form>
 
+<a href="index.html" class="action-button shadow animate submit">Submit</a>
+
 </body>
 </html>
