--- a/website/templates/sell.html
+++ b/website/templates/sell.html
@@ -11,7 +11,7 @@
 
   <h1>Bruin Sell</h1>
 
-  <form>
+  <form method="post">
   Your Name:<br>
   <input type="text" name="name" title="Full Name" style="color:#888;"
     value="Enter Your Name" onfocus="inputFocus(this)" onblur="inputBlur(this)"><br><br>
@@ -30,9 +30,10 @@
   Phone:<br>
   <input type="digit" name="phone" title="Phone" style="color:#888;"
     value="Enter Your Phone Number" onfocus="inputFocus(this)" onblur="inputBlur(this)"><br><br>
+    <input type="submit" value="Submit" class="action-button shadow animate submit" />
 </form>
 
-<a href="index.html" class="action-button shadow animate submit">Submit</a>
+
 
 </body>
 </html>
